--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	}
 	
 	function showPage() {
-		document.getElementByID("loader").style.display = "none";
+		document.getElementById("loader").style.display = "none";
 	}
 	
     document.ontouchstart = function(){ document.getElementById('wp').play(); }
