--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body onload="timer()">
 
 	<div class="loader"></div>
-
+	<div id="Content">
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
 	<div class="container">
 		<a class="navbar-brand" href="#">Jorge Silva</a>
@@ -119,6 +119,7 @@
 		<a href="#"> S-Designs</a>
 	</div>
 </footer>
+</div>
 
 <!-- Java Script Codes -->
 <script>
