--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body onload="timer()">
 
 	<div class="loader"></div>
-	<div id="Content">
+	<div id="Content" style="display:none;">
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
 	<div class="container">
 		<a class="navbar-brand" href="#">Jorge Silva</a>
@@ -131,6 +131,7 @@
 	
 	function showPage() {
 		document.getElementById("loader").style.display = "none";
+		document.getElementById("Content").style.display = "block";
 	}
 	
     document.ontouchstart = function(){ document.getElementById('wp').play(); }
