--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body onload="timer()">
 
-	<div class="loader"></div>
+	<div id="loader"></div>
 	<div id="Content" style="display:none;">
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
 	<div class="container">
