--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 </head>
 <body onload="timer()">
 
-	<div id="loader"></div>
+	<div id="loader">
+		<div class="container">
+			<h3>Loading...</h3>
+		</div>
+	</div>
 	<div id="Content" style="display:none;">
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
 	<div class="container">
