--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="loader-wrapper">
 			<div id="loader"></div>
 			<div class="abs">
-				<p>Loading Content...</p>
+				<p id="fadeout" class="dot">Loading Content</p>
 			</div>
 			<div class="loader-section section-left"></div>
 			<div class="loader-section section-right"></div>
