--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 				<div class="carousel-inner" role="listbox">
 					<div class="carousel-item active movie-filter">
 						<video class="video-fluid " autoplay loop muted>
-							<source src="./assets/videos/Cascade - 300.mp4" type="video/mp4" />
+							<source src="./assets/videos/vid1.mp4" type="video/mp4" />
 						</video>
 					</div>
 					<div class="carousel-item movie-filter">
 						<video class="video-fluid " autoplay loop muted>
-							<source src="./assets/videos/agua-natural.mp4" type="video/mp4" />
+							<source src="./assets/videos/vid2.mp4" type="video/mp4" />
 						</video>
 					</div>
 					<div class="header-bh flex-grow-1">
