--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 </head>
 	<body>
 
-		<div id="loader-wrapper">
+		<!--<div id="loader-wrapper">
 			<div id="loader"></div>
 			<div class="abs">
 				<p id="fadeout" class="dot">Loading Content</p>
 			</div>
 			<div class="loader-section section-left"></div>
 			<div class="loader-section section-right"></div>
-		</div>
+		</div>-->
 
-		
+
 		<div id="content">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
 			<div class="container">
@@ -78,9 +78,9 @@
 							<source src="./assets/videos/vid2.mp4" type="video/mp4" />
 						</video>
 					</div>
-					<div class="header-bh flex-grow-1">
-						<h3 class="h3-responsive text-left">Bem vindos</h3>
-						<p class="text-left">Ao meu portfolio</p>
+					<div class="header-bh">
+						<h1 class="font-weight-bold text-white">Bem vindos</h1>
+						<p class="lead">Ao meu portfolio</p>
 					</div>
 				</div>
 			</div>
@@ -132,7 +132,7 @@
 
 	<!-- Java Script Codes -->
 	<script>
-		
+
 
 
 	</script>
