--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 </head>
 	<body>
 
-		<!--<div id="loader-wrapper">
+		<div id="loader-wrapper">
 			<div id="loader"></div>
 			<div class="abs">
 				<p id="fadeout" class="dot">Loading Content</p>
 			</div>
 			<div class="loader-section section-left"></div>
 			<div class="loader-section section-right"></div>
-		</div>-->
+		</div>
 
 
 		<div id="content">
@@ -39,7 +39,8 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" >
-					<ul class="navbar-nav ml-auto" id="mainNav">
+					<ul class="navbar-nav ml-auto" id="navbarResponsive">
+						<span id='mainNav'></span>
 						<li class="nav-item">
 							<a class="nav-link" href="#home">Home</a>
 						</li>
