--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<div class="row">
 					<div class="col-md-6 mt-md-0 mt-3">
 						<h5 class="text-uppercase">Footer Content</h5>
-						<p>Here you can use rows and columns to organize your footer content.</p>
+						<p>Blablablabla</p>
 					</div>
 					<hr class="clearfix w-100 d-md-none pb-3">
 					<div class="col-md-3 mb-md-0 mb-3">
@@ -156,7 +156,7 @@
 				</div>
 			</div>
 			<div class="footer-copyright text-center py-3 special-color-dark">
-				© 2018 Copyright:
+				© 2019 Copyright:
 				<a href="#"> S-Designs</a>
 			</div>
 		</footer>
