--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="col">
 
                     <div class="hovereffect">
-                        <img class="img-fluid fixImage" src="assets/img/" alt="s-designs">
+                        <img class="img-fluid fixImage" src="assets/img/1.jpg" alt="s-designs">
                         <div class="overlay">
                             <h2>S-Designs</h2>
                             <a class="info" href="#">Initial Design for S-Designs web-site</a>
