--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div class="col">
 
                     <div class="hovereffect">
-                        <img class="img-fluid fixImage" src="assets/img/2.jpg" alt="s-designs">
+                        <img class="img-fluid fixImage" src="assets/img/2.JPG" alt="s-designs">
                         <div class="overlay">
                             <h2>SegurQual</h2>
                             <a class="info" href="#">Project developed for SegurQual.</a>
@@ -213,7 +213,7 @@
                 <div class="col">
 
                     <div class="hovereffect">
-                        <img class="img-fluid fixImage align-content-center" src="assets/img/3.jpg" alt="s-designs">
+                        <img class="img-fluid fixImage" src="assets/img/3.jpg" alt="s-designs">
                         <div class="overlay">
                             <h2>Building Design</h2>
                             <a class="info" href="#">Project developed for Building Design.</a>
