--- a/index.html
+++ b/index.html
@@ -23,20 +23,21 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="preload" href="./assets/videos/vid1.mp4" as="video" type="video/mp4">
     <link rel="preload" href="./assets/videos/vid2.mp4" as="video" type="video/mp4">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i"
+          rel="stylesheet">
     <script src="https://kit.fontawesome.com/1cfb1a8cbd.js" crossorigin="anonymous"></script>
     ss
 </head>
 <body>
 
-<!--<div id="loader-wrapper">
+<div id="loader-wrapper">
     <div id="loader"></div>
     <div class="abs">
         <p id="fadeout" class="dot">Loading Content</p>
     </div>
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
-</div>-->
+</div>
 
 
 <div id="content">
@@ -153,29 +154,34 @@
         </div>
     </section>
 
-	<div class="parallax"></div>
+    <div class="parallax"></div>
 
-	<section id="aboutMe">
-		<div class="container">
-			<div class="row justify-content-between">
-				<div class="col-lg-4">
-					<div class="div-img-bg">
-						<div class="about-img">
-							<img src="assets/img/me.jpg" class="img-responsive" alt="me">
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-7">
-					<div class="about-descr">
-						<p class="p-heading">Probably I should write something cool</p>
-						<p class="seperator">but I prefer to keep myself in secret :) ... Imagine something cool written here <br><br>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <section id="aboutMe">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-4">
+                    <div class="div-img-bg">
+                        <div class="about-img">
+                            <img src="assets/img/me.jpg" class="img-responsive" alt="me">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="about-descr">
+                        <p class="p-heading">Probably I should write something cool</p>
+                        <p class="seperator">but I prefer to keep myself in secret :) ... Imagine something cool written
+                            here <br><br>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="portfolio">
         <div class="container align-items-center">
@@ -183,7 +189,8 @@
             <div class="row" style="padding-bottom: 15px">
                 <div class="col-md-12">
                     <h1 class="sub-title"
-                        style="text-align: center;font-family: 'Open Sans', sans-serif;font-size: 1.5rem;">Web Design</h1>
+                        style="text-align: center;font-family: 'Open Sans', sans-serif;font-size: 1.5rem;">Web
+                        Design</h1>
                 </div>
             </div>
 
@@ -226,7 +233,8 @@
             <div class="row" style="padding-bottom: 15px">
                 <div class="col-md-12">
                     <h1 class="sub-title"
-                        style="text-align: center;font-family: 'Open Sans', sans-serif;font-size: 1.5rem;">Photography</h1>
+                        style="text-align: center;font-family: 'Open Sans', sans-serif;font-size: 1.5rem;">
+                        Photography</h1>
                 </div>
             </div>
 
