--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ml-auto" id="navbarResponsive">
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
                     <span id='mainNav'></span>
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link active" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#skills">Skills</a>
@@ -291,7 +291,7 @@
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a class=" mx-1" href="www.linkedin.com/in/jorge-silva-js">
+                    <a class=" mx-1" href="https://www.linkedin.com/in/jorge-silva-js">
                         <i class="fab fa-linkedin btn-hover"></i>
                     </a>
                 </li>
