--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     ss
 </head>
 <body>
-
 <div id="loader-wrapper">
     <div id="loader"></div>
     <div class="abs">
@@ -52,7 +51,7 @@
                 <ul class="navbar-nav ml-auto">
                     <span id='mainNav'></span>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#home">Home</a>
+                        <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#skills">Skills</a>
@@ -72,7 +71,7 @@
     </nav>
 
     <!--Carousel Wrapper-->
-    <div id="home" class="carousel slide carousel-fade" data-ride="carousel">
+    <div id="home" class="carousel slide carousel-fade" data-ride="carousel" style="margin-top: 5px">
         <!--Indicators-->
         <ol class="carousel-indicators">
             <li data-target="#video-carousel" data-slide-to="0" class="active"></li>
