--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="header-bh">
                     <h1 class="font-weight-light text-white">Welcome</h1>
-                    <p class="lead">Something Great is Coming</p>
+                    <p class="lead">May the scroll be with you</p>
                 </div>
             </div>
         </div>
