--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Portfolio - Jorge Silva - A44615 - PCM - LEIM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -26,7 +24,8 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i"
           rel="stylesheet">
     <script src="https://kit.fontawesome.com/1cfb1a8cbd.js" crossorigin="anonymous"></script>
-    ss
+    
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 <div id="loader-wrapper">
@@ -37,7 +36,6 @@
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 </div>
-
 
 <div id="content">
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top" id="navy">
@@ -194,7 +192,7 @@
             </div>
 
             <div class="row">
-                <div class="col">
+                <div class="col-sm">
 
                     <div class="hovereffect">
                         <img class="img-fluid fixImage" src="assets/img/1.jpg" alt="s-designs">
@@ -205,7 +203,7 @@
                     </div>
 
                 </div>
-                <div class="col">
+                <div class="col-sm">
 
                     <div class="hovereffect">
                         <img class="img-fluid fixImage" src="assets/img/2.JPG" alt="s-designs">
@@ -216,7 +214,7 @@
                     </div>
 
                 </div>
-                <div class="col">
+                <div class="col-sm">
 
                     <div class="hovereffect">
                         <img class="img-fluid fixImage" src="assets/img/3.jpg" alt="s-designs">
@@ -238,7 +236,7 @@
             </div>
 
             <div class="row">
-                <div class="col">
+                <div class="col-sm">
 
                     <div class="hovereffect">
                         <img class="img-fluid fixImage" src="assets/img/4.jpg" alt="s-designs">
@@ -249,7 +247,7 @@
                     </div>
 
                 </div>
-                <div class="col">
+                <div class="col-sm">
 
                     <div class="hovereffect">
                         <img class="img-fluid fixImage" src="assets/img/5.jpg" alt="s-designs">
@@ -260,7 +258,7 @@
                     </div>
 
                 </div>
-                <div class="col">
+                <div class="col-sm">
 
                     <div class="hovereffect">
                         <img class="img-fluid fixImage" src="assets/img/6.jpg" alt="s-designs">
@@ -275,6 +273,13 @@
 
         </div>
     </section>
+	
+	<section id="contacts">
+		<div class="container text-center">
+			<h2>Contactos</h2>
+			<p class="lead">Para entrar em contacto comigo enviar um email para: <a href="#">naoexistologonaopenso@quaseGmail.pt</p>
+		</div>
+	</section>
 
     <!-- Footer -->
     <footer id="contacts" class="page-footer font-small special-color-dark pt-4">
